# Studiary

./: .env.example  .gitignore  .pre-commit-config.yaml  DEPLOY.md  LICENSE  PROYECT_STATUS_REPORT.md  README.md  docker-compose.prod.yml  docker-compose.yml  railway.json  validate-sprint0.sh
backend/: .env.example  .env.production.example  .env.test  Dockerfile  README.md  alembic.ini  gunicorn.conf.py  pyproject.toml  pytest.ini  requirements.txt  test_curso.py
backend/alembic/: env.py
backend/alembic/versions/: .gitkeep  20260430_0721_5409c211d268_add_core_domain_models.py  20260516_1652_c4b0170ed5f2_add_notas_v2_dibujos_tags_temas_tables.py
backend/app/: __init__.py  main.py
backend/app/application/: __init__.py
backend/app/application/schemas/: __init__.py
backend/app/application/schemas/requests/: __init__.py  curso_requests.py  curso_schemas.py  evaluacion_requests.py  nota_requests.py  periodo_requests.py
backend/app/application/schemas/responses/: __init__.py  calculadora_schemas.py  curso_responses.py  curso_schemas.py  evaluacion_responses.py  nota_responses.py  periodo_responses.py
backend/app/application/services/: __init__.py  calculadora_service.py  curso_service.py  evaluacion_service.py  nota_service.py  periodo_service.py
backend/app/core/: __init__.py  config.py  database.py  database_production.py  dependencies.py  exceptions.py  logging.py  security.py
backend/app/domain/: __init__.py
backend/app/domain/entities/: __init__.py  curso.py  periodo.py
backend/app/domain/repositories/: __init__.py  base_repository.py
backend/app/infrastructure/: __init__.py
backend/app/infrastructure/models/: __init__.py  base.py  curso.py  evaluacion.py  nota.py  periodo.py  recurso.py  tarea.py  tema.py
backend/app/infrastructure/repositories/: __init__.py  curso_repository.py  evaluacion_repository.py  periodo_repository.py
backend/app/presentation/: __init__.py
backend/app/presentation/api/: __init__.py
backend/app/presentation/api/v1/: __init__.py
backend/app/presentation/api/v1/endpoints/: calculadora.py  cursos.py  evaluaciones.py  health.py  notas.py  periodos.py  tareas.py
backend/data/: studiary.db-shm  studiary.db-wal
backend/tests/: conftest.py
backend/tests/integration/: test_periodos_api.py
backend/tests/unit/: test_calculadora_service.py
backend/tests/unit/services/: test_curso_service.py  test_evaluacion_service.py  test_nota_service.py
frontend/: .env.example  .env.production  .eslintrc.json  .prettierrc.json  Dockerfile  index.html  nginx.conf  package-lock.json  (+4 more)
(+41 files in other folders)
